// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Breadcrumb Active Breadcrumbs 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-5:hover {
  color: #232336;
}

.emotion-6 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #5f6c85;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

.emotion-25 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-25:hover {
  color: #103fab;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <ol
          aria-label="Breadcrumb"
          className="emotion-3"
        >
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/first-level"
                onClick={[Function]}
              >
                Level 1
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/second-level"
                onClick={[Function]}
              >
                Level 2
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/third-level"
                onClick={[Function]}
              >
                Level 3
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/forth-level"
                onClick={[Function]}
              >
                Level 4
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-24"
            >
              <a
                className="emotion-25"
                href="/fifth-level"
                onClick={[Function]}
              >
                Level 5
              </a>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Active Breadcrumbs with inactive last breadcrumb 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-5:hover {
  color: #232336;
}

.emotion-6 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #5f6c85;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <ol
          aria-label="Breadcrumb"
          className="emotion-3"
        >
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/first-level"
                onClick={[Function]}
              >
                Level 1
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/second-level"
                onClick={[Function]}
              >
                Level 2
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/third-level"
                onClick={[Function]}
              >
                Level 3
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <a
                className="emotion-5"
                href="/forth-level"
                onClick={[Function]}
              >
                Level 4
              </a>
              <span
                className="emotion-6"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-8"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-24"
            >
              <div>
                Level 5
              </div>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Breadcrumb showcase 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-5:hover {
  color: #232336;
}

.emotion-6 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: #5f6c85;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

.emotion-25 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.emotion-25:hover {
  color: #103fab;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <button
            onClick={[Function]}
            style={
              Object {
                "marginBottom": "16px",
              }
            }
            type="button"
          >
            Add data to Breadcrumb
          </button>
          <ol
            aria-label="Breadcrumb"
            className="emotion-3"
          >
            <li>
              <div
                className="emotion-4"
              >
                <a
                  className="emotion-5"
                  href="/first-level"
                  onClick={[Function]}
                >
                  Level 1
                </a>
                <span
                  className="emotion-6"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="emotion-4"
              >
                <a
                  className="emotion-5"
                  href="/second-level"
                  onClick={[Function]}
                >
                  Level 2
                </a>
                <span
                  className="emotion-6"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="emotion-4"
              >
                <a
                  className="emotion-5"
                  href="/third-level"
                  onClick={[Function]}
                >
                  Level 3
                </a>
                <span
                  className="emotion-6"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="emotion-4"
              >
                <a
                  className="emotion-5"
                  href="/forth-level"
                  onClick={[Function]}
                >
                  Level 4
                </a>
                <span
                  className="emotion-6"
                >
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="emotion-24"
              >
                <a
                  className="emotion-25"
                  href="/fifth-level"
                  onClick={[Function]}
                >
                  Level 5
                </a>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Breadcrumb Simple Breadcrumbs 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #5f6c85;
}

.emotion-5 {
  margin: auto 1rem;
  cursor: default;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-7 path {
  fill: #5f6c85;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: default;
  font-size: 0.9375rem;
  font-weight: 500;
  color: #175bf5;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <ol
          aria-label="Breadcrumb"
          className="emotion-3"
        >
          <li>
            <div
              className="emotion-4"
            >
              <div>
                Level 1
              </div>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-7"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-4"
            >
              <div>
                Level 2
              </div>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-7"
                  />
                </span>
              </span>
            </div>
          </li>
          <li>
            <div
              className="emotion-12"
            >
              <div>
                Level 3
              </div>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;
